tests/ui/issues/issue-20313.stderr
error[E0658]: linking to LLVM intrinsics is experimental
  --> $DIR/issue-20313.rs:3:5
   |
LL |     fn sqrt(x: f32) -> f32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29602 <https://github.com/rust-lang/rust/issues/29602> for more information
   = help: add `#![feature(link_llvm_intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
